# web3-tx-stream

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
src/: debug.rs  filter.rs  main.rs
src/app/: handler.rs  mod.rs  state.rs
src/model/: decoder.rs  mod.rs  transaction.rs
src/rpc/: client.rs  mod.rs
src/ui/: details.rs  filter.rs  footer.rs  header.rs  list.rs  mod.rs  quit.rs
