[package]
name = "base-sniffer-tui"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3          # Maximum optimization
lto = true            # Enable Link Time Optimization
codegen-units = 1     # Single codegen unit for better optimization
panic = "abort"       # Smaller binary, faster in case of panic
strip = true          # Strip symbols for smaller binary

[profile.dev]
opt-level = 1         # Some optimization in debug mode for better performance

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
alloy = { version = "0.3", features = ["full", "node-bindings"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
futures = "0.3"
once_cell = "1"
hex = "0.4"
ruint = "=1.12.3"
base64ct = "=1.6.0"
